add_subdirectory(argv)
add_subdirectory(command)
add_subdirectory(cuithread)


set(TARGET_NAME Mutsu_CUI)
add_executable(${TARGET_NAME} MACOSX_BUNDLE main.cpp)
target_link_libraries(${TARGET_NAME} fssimplewindow_connection fm77av fm77avthread fm77avdef fm77avargv fm77avcommand fm77avcuithread)



set(FM7ROMDIR ${CMAKE_SOURCE_DIR}/../../77AVTEST/ROMS/7)
set(FM77AVROMDIR ${CMAKE_SOURCE_DIR}/../../77AVTEST/ROMS/AV)
set(FM77AV40ROMDIR ${CMAKE_SOURCE_DIR}/../../77AVTEST/ROMS/AV40)
set(DISKIMAGE_DIR ${CMAKE_SOURCE_DIR}/../../77AVTEST/DISK)
set(TAPEIMAGE_DIR ${CMAKE_SOURCE_DIR}/../../77AVTEST/TAPE)
set(STATE_DIR ${CMAKE_SOURCE_DIR}/../../77AVTEST/STATE)
set(EVENTLOG_DIR ${CMAKE_SOURCE_DIR}/../eventLog)

add_test(
	NAME FM7DEMO_2017_BY_CAPTAINYS
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${CMAKE_CURRENT_SOURCE_DIR}/../../diskimage/2017_FM7DEMO_CaptainYS_V3.T77"
		-UNITTEST
		-AUTOSTARTTAPE
		-POWEROFFAT
		MAIN
		407F
		-NOWAIT
)

add_test(
	NAME FM7DEMO_2018_BY_CAPTAINYS
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${CMAKE_CURRENT_SOURCE_DIR}/../../diskimage/2018_FM7DEMO_CaptainYS_V1.T77"
		-UNITTEST
		-AUTOSTARTTAPE
		-POWEROFFAT
		MAIN
		128E
		-NOWAIT
)

add_test(
	NAME FM7DEMO_2018_BY_CAPTAINYS_AV
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-TAPE
		"${CMAKE_CURRENT_SOURCE_DIR}/../../diskimage/2018_FM7DEMO_CaptainYS_V1.T77"
		-UNITTEST
		-AUTOSTARTTAPE
		-POWEROFFAT
		MAIN
		128E
		-NOWAIT
)

add_test(
	NAME FM7DEMO_2018_BY_CAPTAINYS_AV40
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-TAPE
		"${CMAKE_CURRENT_SOURCE_DIR}/../../diskimage/2018_FM7DEMO_CaptainYS_V1.T77"
		-UNITTEST
		-AUTOSTARTTAPE
		-POWEROFFAT
		MAIN
		128E
		-NOWAIT
)

add_test(
	NAME FM77AVDEMO_2019_BY_CAPTAINYS_AV
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${CMAKE_CURRENT_SOURCE_DIR}/../../diskimage/2019_FM77AVDEMO_CaptainYS_V2.D77"
		-UNITTEST
		-AUTOSTARTTAPE
		-POWEROFFAT
		MAIN
		321D
		-NOWAIT
)

add_test(
	NAME FM77AVDEMO_2019_BY_CAPTAINYS_AV40
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-FD0
		"${CMAKE_CURRENT_SOURCE_DIR}/../../diskimage/2019_FM77AVDEMO_CaptainYS_V2.D77"
		-UNITTEST
		-AUTOSTARTTAPE
		-POWEROFFAT
		MAIN
		321D
		-NOWAIT
)

add_test(
	NAME FBASICV34L20
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/F-BASICV34L20.D77"
		-UNITTEST
		-AUTOSTARTTAPE
		-POWEROFFAT
		MAIN
		663A
		-NOWAIT
		-EVTLOG
		"${EVENTLOG_DIR}/FB34TEST.evt"
)

add_test(
	NAME FBASICV33L10_AV
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/F-BASICV33L10.D77"
		-UNITTEST
		-AUTOSTARTTAPE
		-POWEROFFAT
		MAIN
		9612
		-NOWAIT
		-EVTLOG
		"${EVENTLOG_DIR}/FB33TEST.evt"
)

add_test(
	NAME FBASICV33L10_AV40
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/F-BASICV33L10.D77"
		-UNITTEST
		-AUTOSTARTTAPE
		-POWEROFFAT
		MAIN
		9612
		-NOWAIT
		-EVTLOG
		"${EVENTLOG_DIR}/FB33TEST.evt"
)

add_test(
	NAME THEXDER_RDD
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/THEXDER.RDD"
		-EVTLOG
		"${EVENTLOG_DIR}/THEXDER.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		196A
		-NOWAIT
)

add_test(
	NAME THEXDER_D77
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Thexder.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/THEXDER.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		196A
		-NOWAIT
)

add_test(
	NAME WORLDGOLF2_START_AV
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/WorldGolf2_1.D77"
		-FD1
		"${DISKIMAGE_DIR}/WorldGolf2_2.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/WORLDGOLF2TEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		307D
		-NOWAIT
)

add_test(
	NAME WORLDGOLF2_START_AV40
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/WorldGolf2_1.D77"
		-FD1
		"${DISKIMAGE_DIR}/WorldGolf2_2.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/WORLDGOLF2TEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		307D
		-NOWAIT
)

add_test(
	NAME LAPTICK_TITLE_AV
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Laptick.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/LAPTICKTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		419F
		-NOWAIT
)

add_test(
	NAME LAPTICK_TITLE_AV40
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Laptick.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/LAPTICKTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		419F
		-NOWAIT
)

add_test(
	NAME PRO_BASEBALL_FAN_TITLE_AV
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/ProBaseballFan_1.D77"
		-FD1
		"${DISKIMAGE_DIR}/ProBaseballFan_2.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/PROFANTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		B489
		-NOWAIT
)

add_test(
	NAME PRO_BASEBALL_FAN_TITLE_AV40
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/ProBaseballFan_1.D77"
		-FD1
		"${DISKIMAGE_DIR}/ProBaseballFan_2.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/PROFANTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		B489
		-NOWAIT
)

add_test(
	NAME MAGUS_START_FM7
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Magus.d77"
		-EVTLOG
		"${EVENTLOG_DIR}/MAGUSTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		3A6B
		-NOWAIT
)

add_test(
	NAME MAGUS_START_AV
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Magus.d77"
		-EVTLOG
		"${EVENTLOG_DIR}/MAGUSTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		3A6B
		-NOWAIT
)

add_test(
	NAME MAGUS_START_AV40
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Magus.d77"
		-EVTLOG
		"${EVENTLOG_DIR}/MAGUSTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		3A6B
		-NOWAIT
)

add_test(
	NAME XANADU1_TRAINING_GROUND_START_FM7
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Xanadu1_A.D77"
		-FD1
		"${DISKIMAGE_DIR}/Xanadu1_User.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/XANADU1TEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		0185
		-NOWAIT
)

add_test(
	NAME XANADU1_TRAINING_GROUND_START_AV
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Xanadu1_A.D77"
		-FD1
		"${DISKIMAGE_DIR}/Xanadu1_User.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/XANADU1TEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		0185
		-NOWAIT
)

add_test(
	NAME XANADU1_TRAINING_GROUND_START_AV40
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Xanadu1_A.D77"
		-FD1
		"${DISKIMAGE_DIR}/Xanadu1_User.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/XANADU1TEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		0185
		-NOWAIT
)

add_test(
	NAME XANADU1_LASTBOSS_TO_ENDING
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Xanadu1_A.D77"
		-FD1
		"${DISKIMAGE_DIR}/Xanadu1_User.D77"
		-INITCMD "LOADSTATE ${STATE_DIR}/Xanadu1Ending.7state"
		-UNITTEST
		-POWEROFFAT
		MAIN
		0193
		-NOWAIT
)

add_test(
	NAME LAYDOCK_GAMEPLAY_AV
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/LAYDOCK1.D77"
		-FD1
		"${DISKIMAGE_DIR}/LAYDOCK2.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/LAYDOCKTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		60C0
		-NOWAIT
)

add_test(
	NAME LAYDOCK_GAMEPLAY_AV40
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/LAYDOCK1.D77"
		-FD1
		"${DISKIMAGE_DIR}/LAYDOCK2.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/LAYDOCKTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		60C0
		-NOWAIT
)

add_test(
	NAME DEATH_FORCE_GAMEPLAY
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/DeathForce_1.D77"
		-FD1
		"${DISKIMAGE_DIR}/DeathForceUser.d77"
		-EVTLOG
		"${EVENTLOG_DIR}/DEATHFORCETEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		2632
		-NOWAIT
)

add_test(
	NAME DEATH_FORCE_GAMEPLAY_AV40
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/DeathForce_1.D77"
		-FD1
		"${DISKIMAGE_DIR}/DeathForceUser.d77"
		-EVTLOG
		"${EVENTLOG_DIR}/DEATHFORCETEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		2632
		-NOWAIT
)

add_test(
	NAME VALIS_START_AV
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Valis_1.D77"
		-FD1
		"${DISKIMAGE_DIR}/Valis_2.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/VALISTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		5FFF
		-NOWAIT
)

add_test(
	NAME VALIS_START_AV40
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Valis_1.D77"
		-FD1
		"${DISKIMAGE_DIR}/Valis_2.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/VALISTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		5FFF
		-NOWAIT
)

add_test(
	NAME YS1_START_AV
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/YS_A.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/YS1TEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		A000
		-NOWAIT
)

add_test(
	NAME YS1_START_AV40
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/YS_A.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/YS1TEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		A000
		-NOWAIT
)

add_test(
	NAME YS1_ENDING
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/YS_B.D77"
		-INITCMD "LOADSTATE ${STATE_DIR}/YSENDING.7state"
		-UNITTEST
		-POWEROFFAT
		MAIN
		09E4
		-NOWAIT
)

add_test(
	NAME POLAR_STAR_III
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/PolarStarIII.t77"
		-AUTOSTARTTAPE
		-UNITTEST
		-POWEROFFAT
		MAIN
		018F
		-NOWAIT
)

add_test(
	NAME PLAZMA_LINE_TAPE_TITLE
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/PlazmaLine.T77"
		-EVTLOG
		"${EVENTLOG_DIR}/RUN.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		3B69
		-NOWAIT
)

add_test(
	NAME PLAZMA_LINE_DISK_TITLE
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/PLAZMA.RDD"
		-UNITTEST
		-POWEROFFAT
		MAIN
		3B69
		-NOWAIT
)

add_test(
	NAME DELPHIS_TITLE
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/Delphis.T77"
		-EVTLOG
		"${EVENTLOG_DIR}/RUN.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		3FD2
		-NOWAIT
)

add_test(
	NAME ASTEKA
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/ASTEKA.RDD"
		-UNITTEST
		-POWEROFFAT
		MAIN
		7F19
		-TESTCONDMEM
		MAIN
		7F19
		35
		-NOWAIT
)

add_test(
	NAME TEMPLE_DEL_SOL
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/TAIYO-A.RDD"
		-FD1
		"${DISKIMAGE_DIR}/TAIYO-B.RDD"
		-UNITTEST
		-POWEROFFAT
		MAIN
		34B
		-TESTCONDMEM
		MAIN
		34B
		26
		-NOWAIT
)

add_test(
	NAME DRAGON_SLAYER_TAPE_AUTODEMO
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/DragonSlayer.t77"
		-AUTOSTARTTAPE
		-UNITTEST
		-POWEROFFAT
		MAIN
		3B0C
		-NOWAIT
)

# 3B03 AE4B       LDX     $0B,U
# 3B05 1027FD06   LBEQ    $380F   Prob LIFE=0
add_test(
	NAME DRAGON_SLAYER_DISK_AUTODEMO
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/DRGNSLYR.RDD"
		-UNITTEST
		-POWEROFFAT
		MAIN
		380F
		-TESTCONDMEM
		MAIN
		3B03
		AE
		-NOWAIT
)

add_test(
	NAME YS2_OPENING_AV
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/YS2_PROG.D77"
		-UNITTEST
		-POWEROFFAT
		MAIN
		2144
		-NOWAIT
)

add_test(
	NAME YS2_OPENING_AV_RDD
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/YS2PROG.RDD"
		-UNITTEST
		-POWEROFFAT
		MAIN
		2144
		-NOWAIT
)

add_test(
	NAME YS2_OPENING_AV40
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/YS2_PROG.D77"
		-UNITTEST
		-POWEROFFAT
		MAIN
		2144
		-NOWAIT
)

add_test(
	NAME YS2_ENDING
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/YS2_PROG.D77"
		-INITCMD "LOADSTATE ${STATE_DIR}/YS2ENDING.7STATE"
		-UNITTEST
		-POWEROFFAT
		MAIN
		1024
		-NOWAIT
)

add_test(
	NAME DRAGON_BUSTER_AUTODEMO_AV
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/DragonBuster.D77"
		-UNITTEST
		-POWEROFFAT
		MAIN
		0395
		-NOWAIT
)

add_test(
	NAME DRAGON_BUSTER_AUTODEMO_AV40
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/DragonBuster.D77"
		-UNITTEST
		-POWEROFFAT
		MAIN
		0395
		-NOWAIT
)

add_test(
	NAME SPACE_HARRIER_GAMEPLAY_AV
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/SpaceHarrierA.D77"
		-FD1
		"${DISKIMAGE_DIR}/SpaceHarrierB.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/SPACEHARRIERTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		540F
		-NOWAIT
)

add_test(
	NAME SPACE_HARRIER_GAMEPLAY_AV40
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/SpaceHarrierA.D77"
		-FD1
		"${DISKIMAGE_DIR}/SpaceHarrierB.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/SPACEHARRIERTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		540F
		-NOWAIT
)

add_test(
	NAME SILPHEED_OPENING_AV
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Silpheed_1.D77"
		-FD1
		"${DISKIMAGE_DIR}/Silpheed_2.D77"
		-UNITTEST
		-POWEROFFAT
		MAIN
		D645
		-NOWAIT
)

add_test(
	NAME SILPHEED_OPENING_AV40
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Silpheed_1.D77"
		-FD1
		"${DISKIMAGE_DIR}/Silpheed_2.D77"
		-UNITTEST
		-POWEROFFAT
		MAIN
		D645
		-NOWAIT
)

add_test(
	NAME AMERICAN_TRUCK_TAPE_START
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/AmericanTruck.T77"
		-EVTLOG
		"${EVENTLOG_DIR}/RUN.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		3037
		-NOWAIT
)

add_test(
	NAME HYDLIDE_TAPE
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/Hydlide.T77"
		-EVTLOG
		"${EVENTLOG_DIR}/LOADM.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		2419
		-NOWAIT
)

add_test(
	NAME HYDLIDE2
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/HYDLIDE2.RDD"
		-UNITTEST
		-POWEROFFAT
		MAIN
		1126
		-TESTCONDMEM
		MAIN
		1126
		7E
		-NOWAIT
)

add_test(
	NAME TRITORN_TAPE_START
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/Tritorn.T77"
		-EVTLOG
		"${EVENTLOG_DIR}/RUN.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		0159
		-NOWAIT
)

add_test(
	NAME JELDA_TAPE_AUTODEMO
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/Jelda.T77"
		-EVTLOG
		"${EVENTLOG_DIR}/LOADM.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		6A16
		-NOWAIT
)

add_test(
	NAME JELDA2_TAPE_AUTODEMO
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/Jelda2.T77"
		-AUTOSTARTTAPE
		-UNITTEST
		-POWEROFFAT
		MAIN
		73EE
		-TESTCONDMEM
		MAIN
		73EE
		17 	# 73EE 17011B     LBSR    $750C
		-NOWAIT
)

add_test(
	NAME DIGDUG_TAPE_START
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/DigDug.T77"
		-EVTLOG
		"${EVENTLOG_DIR}/RUN.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		572A
		-NOWAIT
)

add_test(
	NAME SPACECRUISER_TAPE_START
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/SpaceCruiser.T77"
		-AUTOSTARTTAPE
		-EVTLOG
		"${EVENTLOG_DIR}/SPACECRUISERTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		4278
		-NOWAIT
)

add_test(
	NAME KUGYOKUDEN_OPENING_AV
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/KUGYOKU1.d77"
		-FD1
		"${DISKIMAGE_DIR}/KUGYOKU2.d77"
		-UNITTEST
		-POWEROFFAT
		MAIN
		462E
		-NOWAIT
)

add_test(
	NAME KUGYOKUDEN_OPENING_AV40
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/KUGYOKU1.d77"
		-FD1
		"${DISKIMAGE_DIR}/KUGYOKU2.d77"
		-UNITTEST
		-POWEROFFAT
		MAIN
		462E
		-NOWAIT
)

add_test(
	NAME DEEPFOREST_OPENING_AV
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/DeepForest_1.D77"
		-FD1
		"${DISKIMAGE_DIR}/DeepForest_2.D77"
		-UNITTEST
		-POWEROFFAT
		MAIN
		6034
		-NOWAIT
)

add_test(
	NAME DEEPFOREST_OPENING_AV40
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/DeepForest_1.D77"
		-FD1
		"${DISKIMAGE_DIR}/DeepForest_2.D77"
		-UNITTEST
		-POWEROFFAT
		MAIN
		6034
		-NOWAIT
)

add_test(
	NAME LOSTPOWER_OPENING_AV
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/LostPower_1.D77"
		-FD1
		"${DISKIMAGE_DIR}/LostPower_2.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/LOSTPOWERTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		C2EE
		-NOWAIT
)

add_test(
	NAME LOSTPOWER_OPENING_AV40
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/LostPower_1.D77"
		-FD1
		"${DISKIMAGE_DIR}/LostPower_2.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/LOSTPOWERTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		C2EE
		-NOWAIT
)

add_test(
	NAME ALBATROSS_MULTI_RECORD_READ
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Albatross_1.d77"
		-UNITTEST
		-POWEROFFAT
		MAIN
		86F2
		-TESTCONDMEM
		MAIN   # Check multi-record read successfully read to the last byte.
		BFFF
		05
		-NOWAIT
)

add_test(
	NAME BLUEFOX
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/BlueFox.t77"
		-AUTOSTARTTAPE
		-UNITTEST
		-POWEROFFAT
		MAIN
		2477
		-TESTCONDMEM
		MAIN   # Check $2477 is JSR.
		2477
		BD
		-NOWAIT
)

add_test(
	NAME VOLGUARD
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/Volguard.t77"
		-AUTOSTARTTAPE
		-UNITTEST
		-POWEROFFAT
		MAIN
		2D75
		-TESTCONDMEM
		MAIN   # Check $2D75 is RTS.
		2D75
		39
		-NOWAIT
)

add_test(
	NAME COSMO_CRASH
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/CosmoCrash.t77"
		-EVTLOG
		"${EVENTLOG_DIR}/WAIT_AND_BANG_RETURN.evt"
		-AUTOSTARTTAPE
		-UNITTEST
		-POWEROFFAT
		MAIN
		3E83
		-TESTCONDMEM
		MAIN   # Check $3E83 is CLR
		3E83
		7F
		-NOWAIT
)

add_test(
	NAME TERRA4001_OPENING
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/Terra4001-1.t77"
		-AUTOSTARTTAPE
		-UNITTEST
		-POWEROFFAT
		MAIN
		5A35
		-TESTCONDMEM
		MAIN   # Check $5A35 is PULS
		5A35
		35
		-NOWAIT
)

add_test(
	NAME COURAGEOUS_PERSEUS
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/CourageousPerseus.t77"
		-AUTOSTARTTAPE
		-UNITTEST
		-POWEROFFAT
		MAIN
		50A9
		-TESTCONDMEM
		MAIN   # Check $50A9 is LBSR
		50A9
		17
		-NOWAIT
)

add_test(
	NAME THUNDER_FORCE
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/ThunderForce.t77"
		-AUTOSTARTTAPE
		-UNITTEST
		-POWEROFFAT
		MAIN
		2183
		-TESTCONDMEM
		MAIN   # Check $2183 is PULS
		2183
		35
		-NOWAIT
)

add_test(
	NAME CASTLE_EXCELLENT
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/CastleExcellent.t77"
		-AUTOSTARTTAPE
		-UNITTEST
		-POWEROFFAT
		SUB
		BF4F
		-TESTCONDMEM
		SUB   # Check $BF4F is RTS
		BF4F
		39
		-NOWAIT
)

add_test(
	NAME CHACK_N_POP
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/ChackNPop.t77"
		-AUTOSTARTTAPE
		-UNITTEST
		-POWEROFFAT
		MAIN
		2E40
		-TESTCONDMEM
		MAIN   # Check $2E40 is BRA
		2E40
		20
		-NOWAIT
)

add_test(
	NAME DAIVA_OPENING
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/DAIVA_A.RDD"
		-FD1
		"${DISKIMAGE_DIR}/DAIVA_B.RDD"
		-UNITTEST
		-POWEROFFAT
		MAIN
		104E
		-TESTCONDMEM
		MAIN   # Check $104E is BRA
		104E
		20
		-NOWAIT
)

add_test(
	NAME NOBUNAGA_ZENKOKU_AV
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/NobuzenAV_A.RDD"
		-FD1
		"${DISKIMAGE_DIR}/NobuzenAV_B.RDD"
		-UNITTEST
		-POWEROFFAT
		MAIN
		57B5
		-TESTCONDMEM
		MAIN   # Check $57B5 is LEAS
		57B5
		32
		-NOWAIT
)

add_test(
	NAME SANGOKUSHI_AV
	COMMAND
		${TARGET_NAME}
		"${FM77AV40ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/3GOKU_1.D77"
		-FD1
		"${DISKIMAGE_DIR}/3GOKU_2.D77"   # Requires 3GOKU_2.D77EXT
		-UNITTEST
		-POWEROFFAT
		MAIN
		780A
		-TESTCONDMEM
		MAIN
		780A     # Check $780A is JSR
		BD
		-NOWAIT
)

add_test(
	NAME MANHATTAN_REQUIEM
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Manhattan_A.RDD"
		-FD1
		"${DISKIMAGE_DIR}/Manhattan_B.RDD"
		-UNITTEST
		-POWEROFFAT
		MAIN
		18C8
		-TESTCONDMEM
		MAIN   # Check $18C8 is CLR
		18C8
		0F
		-NOWAIT
)

add_test(
	NAME THE_TOWER_OF_DRUAGA_AV
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/DRUAGA.RDD"
		-UNITTEST
		-POWEROFFAT
		MAIN
		576D
		-TESTCONDMEM
		MAIN   # Check $576D is BRA
		576D
		20
		-NOWAIT
)

add_test(
	NAME THE_RETURN_OF_ISHTAR
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/ISHTAR_A.RDD"
		-FD1
		"${DISKIMAGE_DIR}/ISHTAR_B.RDD"
		-UNITTEST
		-POWEROFFAT
		MAIN
		18D0
		-TESTCONDMEM
		MAIN   # Check $18D0 is JSR
		18D0
		BD
		-NOWAIT
)

add_test(
	NAME F-2_GRAND_PRIX
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/F2GRANDPRIX.T77"
		-AUTOSTARTTAPE
		-UNITTEST
		-POWEROFFAT
		MAIN
		5BB1
		-TESTCONDMEM
		MAIN   # Check $5BB1 is BRA
		5BB1
		20
		-NOWAIT
)

add_test(
	NAME YAKSA
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/yaksa.d77"
		-UNITTEST
		-POWEROFFAT
		MAIN
		93E6
		-TESTCONDMEM
		MAIN
		93E6
		1E
		-NOWAIT
)

add_test(
	NAME LUXOR
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Luxor_1.D77"
		-FD1
		"${DISKIMAGE_DIR}/Luxor_2.D77"
		-UNITTEST
		-POWEROFFAT
		MAIN
		4019
		-TESTCONDMEM
		MAIN
		4019
		20
		-NOWAIT
)

add_test(
	NAME MIGHT_AND_MAGIC_TITLE
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/MITMGC_A.RDD"
		-FD1
		"${DISKIMAGE_DIR}/MITMGC_B.RDD"
		-UNITTEST
		-POWEROFFAT
		MAIN
		51CB
		-TESTCONDMEM
		MAIN
		51CB
		32		# 51CB 3264       LEAS    $04,S
		-NOWAIT
)

#53D8 3268       LEAS    $08,S
add_test(
	NAME MIGHT_AND_MAGIC_2_TITLE
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/MM2_P.RDD"
		-FD1
		"${DISKIMAGE_DIR}/MM2_PLYR.RDD"
		-UNITTEST
		-POWEROFFAT
		MAIN
		53D8
		-TESTCONDMEM
		MAIN
		53D8
		32
		-NOWAIT
)

# 183B 8E183B     LDX     #$183B
add_test(
	NAME KITAHEI_BOOT
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/KITAHEI.RDD"
		-UNITTEST
		-POWEROFFAT
		MAIN
		183B
		-TESTCONDMEM
		MAIN
		183B
		8E
		-NOWAIT
)

# 02FB 26F9       BNE     $02F6
add_test(
	NAME KOHAKU_IRO_NO_YUIGON_BOOT
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/KOHAKU1.RDD"
		-FD1
		"${DISKIMAGE_DIR}/KOHAKU2.RDD"
		-UNITTEST
		-POWEROFFAT
		MAIN
		02FB
		-TESTCONDMEM
		MAIN
		02FB
		26
		-NOWAIT
)

# 12AB BD10C5     JSR     $10C5
add_test(
	NAME MURDER_CLUB_BOOT
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/MRDRCLB1.RDD"
		-FD1
		"${DISKIMAGE_DIR}/MRDRCLB2.RDD"
		-UNITTEST
		-POWEROFFAT
		MAIN
		12AB
		-TESTCONDMEM
		MAIN
		12AB
		BD
		-NOWAIT
)

# 50C9 7E6E00     JMP     $6E00
add_test(
	NAME FIRE_CRYSTAL_BOOT
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/FIRECRYS.RDD"
		-UNITTEST
		-POWEROFFAT
		MAIN
		6E96
		-TESTCONDMEM
		MAIN
		6E96
		7E
		-NOWAIT
)

# 090D 0FA2       CLR     <$A2
add_test(
	NAME RIGLAS_BOOT
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/RIGLAS.RDD"
		-UNITTEST
		-POWEROFFAT
		MAIN
		090D
		-TESTCONDMEM
		MAIN
		090D
		0f
		-NOWAIT
)

#1B1B B7FD93     STA     $FD93
add_test(
	NAME FM77AV_OFFICIAL_DEMO
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/77AVDEMO.RDD"
		-UNITTEST
		-POWEROFFAT
		MAIN
		1B1B
		-TESTCONDMEM
		MAIN
		1B1B
		B7
		-NOWAIT
)

#3421 BD3433     JSR     $3433
add_test(
	NAME ULTIMA4_BOOT
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/ULTIM4_1.RDD"
		-FD1
		"${DISKIMAGE_DIR}/ULTIM4_2.RDD"
		-UNITTEST
		-POWEROFFAT
		MAIN
		3421
		-TESTCONDMEM
		MAIN
		3421
		BD
		-NOWAIT
)

#1143 BD11EA     JSR     $11EA
add_test(
	NAME BATTEN_TANUKI_NO_DAIBOUKEN_BOOT
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/TANUKI.RDD"
		-UNITTEST
		-POWEROFFAT
		MAIN
		1143
		-TESTCONDMEM
		MAIN
		1143
		BD
		-NOWAIT
)

#4343 20C7       BRA     $430C
add_test(
	NAME GANDHARA_TITLE
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/GANDHA_A.RDD"
		-FD1
		"${DISKIMAGE_DIR}/GANDHA_B.RDD"
		-UNITTEST
		-POWEROFFAT
		MAIN
		4343
		-TESTCONDMEM
		MAIN
		4343
		20
		-NOWAIT
)
